# hello-rust-embedded

./: .gdbinit  Cargo.toml  LICENSE  memory.x  openocd.cfg
src/: main.rs
