[package]
authors = ["Ezra Buehler <ezra@easyb.ch>"]
edition = "2018"
readme = "README.md"
name = "hello-rust-embedded"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.5.0"
nb = "1.0.0"
nrf24-rs = "0.1.1"
panic-halt = "0.2.0"

[dependencies.stm32f0xx-hal]
features = ["stm32f091"]
version = "0.18.0"

# this lets you use `cargo fix`!
[[bin]]
name = "hello-rust-embedded"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[patch.crates-io]
# Wait until stm32-rs/stm32f0xx-hal/122 is merged
stm32f0xx-hal = {git = "https://github.com/easybe/stm32f0xx-hal"}
